[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/bones/hud_coin.png" type="Texture" id=1]
[ext_resource path="res://assets/char05_AnimAll.gltf" type="PackedScene" id=2]
[ext_resource path="res://scripts/Character.gd" type="Script" id=3]
[ext_resource path="res://scripts/Counter.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "char05_Idle"

[sub_resource type="AnimationNodeStateMachine" id=2]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "char05_Jump"

[sub_resource type="AnimationNodeStateMachine" id=4]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "char05_Running"

[sub_resource type="AnimationNodeStateMachine" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Idle/node = SubResource( 1 )
states/Idle/position = Vector2( -870.28, 36.656 )
states/IdleLoop/node = SubResource( 2 )
states/IdleLoop/position = Vector2( -870.28, 208.656 )
states/Jump/node = SubResource( 3 )
states/Jump/position = Vector2( -635.28, 208.656 )
states/JumpLoop/node = SubResource( 4 )
states/JumpLoop/position = Vector2( -423.28, 208.656 )
states/Running/node = SubResource( 5 )
states/Running/position = Vector2( -635.28, 36.656 )
states/RunningLoop/node = SubResource( 6 )
states/RunningLoop/position = Vector2( -423.28, 35.1159 )
transitions = [ "Idle", "Jump", SubResource( 7 ), "Idle", "Running", SubResource( 8 ), "Running", "Idle", SubResource( 9 ), "Jump", "Idle", SubResource( 10 ), "Running", "Jump", SubResource( 11 ), "Jump", "Running", SubResource( 12 ), "Running", "RunningLoop", SubResource( 13 ), "RunningLoop", "Running", SubResource( 14 ), "Idle", "IdleLoop", SubResource( 15 ), "IdleLoop", "Idle", SubResource( 16 ), "JumpLoop", "Jump", SubResource( 17 ), "Jump", "JumpLoop", SubResource( 18 ) ]
start_node = "Idle"
graph_offset = Vector2( -1026.28, 5.19606 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="CapsuleShape" id=24]

[node name="Root" type="Spatial"]

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 3 )

[node name="PlayerModel" parent="Player" instance=ExtResource( 2 )]

[node name="AnimationPlayer" parent="Player/PlayerModel" index="2"]
playback_process_mode = 0

[node name="AnimationTree" type="AnimationTree" parent="Player/PlayerModel"]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
root_motion_track = NodePath("Armature/Skeleton:root_motion")
parameters/playback = SubResource( 20 )
parameters/IdleLoop/playback = SubResource( 21 )
parameters/JumpLoop/playback = SubResource( 22 )
parameters/RunningLoop/playback = SubResource( 23 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 0.05, 0, 0, 0, -8.14603e-09, -0.05, 0, 0.05, -8.14603e-09, 0, 0.05, 0 )
shape = SubResource( 24 )

[node name="RootMotionView" type="RootMotionView" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
animation_path = NodePath("../PlayerModel/AnimationTree")

[node name="CameraBase" type="Spatial" parent="Player"]

[node name="CameraRot" type="Spatial" parent="Player/CameraBase"]

[node name="SpringArm" type="SpringArm" parent="Player/CameraBase/CameraRot"]
transform = Transform( -1, -1.11444e-07, 3.06191e-07, 0, 0.939693, 0.34202, -3.25841e-07, 0.34202, -0.939693, 0, 0, 0 )
spring_length = 0.5

[node name="Camera" type="Camera" parent="Player/CameraBase/CameraRot/SpringArm"]
near = 0.01

[node name="SpotLight" type="SpotLight" parent="Player"]
transform = Transform( 1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 0.2, -0.045603 )
light_color = Color( 0.2, 0.2, 0.2, 1 )
light_energy = 0.2
shadow_enabled = true

[node name="HUD" type="Control" parent="."]
anchor_left = 0.727
anchor_right = 1.0
margin_left = 72.552
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 71.6362, 48.2991 )
scale = Vector2( 0.133279, 0.136454 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HUD"]
margin_left = 111.95
margin_top = 39.0
margin_right = 120.95
margin_bottom = 54.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="HUD"]
margin_left = 131.0
margin_top = 40.0
margin_right = 275.0
margin_bottom = 54.0
text = "0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Player/PlayerModel"]
